--- a/index.html
+++ b/index.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SWAPI</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
-        <h1>STAR WARS CATALOG</h1>
+        <h1>STAR WARS <br>CATALOG</h1>
     </header>
     <main>
-        <aside class="characters">
-            <h2>Characters</h2>
-            <ul class="characters-list"></ul>
-            <section class="pagination">
-                <button><</button>
-                <p class="current-page"></p>
-                <p>/</p>
-                <p class="total-pages"></p>
-                <button>></button>
-            </section>
-        </aside>
-        <aside class="details">
-            <h2>Details</h2>
-            <section class="character-details">
-                <h3 class="character-details__name"></h3>
-                <p class="character-details__height"></p>
-                <p class="character-details__mass"></p>
-                <p class="character-details__haircolor"></p>
-                <p class="character-details__skincolor"></p>
-                <p class="character-details__eyecolor"></p>
-                <p class="character-details__birthyear"></p>
-                <p class="character-details__gender"></p>
-            </section>
-            <section class="character-homeworld">
-                <h3 class="character-homeworld__name"></h3>
-                <p class="character-homeworld__rotation-period"></p>
-                <p class="character-homeworld__orbital-period"></p>
-                <p class="character-homeworld__diameter"></p>
-                <p class="character-homeworld__climate"></p>
-                <p class="character-homeworld__gravity"></p>
-                <p class="character-homeworld__terrain"></p>
-            </section>
-        </aside>
+        <section class="main-wrapper">
+            <aside class="characters">
+                <h2>Characters</h2>
+                <ul class="characters-list"></ul>
+                <section class="pagination">
+                    <button class="prev-page">
+                        < </button>
+                            <p class="current-page"></p>
+                            <p>/</p>
+                            <p class="total-pages"></p>
+                            <button class="next-page">></button>
+                </section>
+            </aside>
+            <aside class="details">
+                <h2>Details</h2>
+                <section class="character-details">
+                    <h3 class="character-details__name"></h3>
+                    <p class="character-details__height"></p>
+                    <p class="character-details__mass"></p>
+                    <p class="character-details__haircolor"></p>
+                    <p class="character-details__skincolor"></p>
+                    <p class="character-details__eyecolor"></p>
+                    <p class="character-details__birthyear"></p>
+                    <p class="character-details__gender"></p>
+                </section>
+                <section class="character-homeworld">
+                    <h3 class="character-homeworld__name"></h3>
+                    <p class="character-homeworld__rotation-period"></p>
+                    <p class="character-homeworld__orbital-period"></p>
+                    <p class="character-homeworld__diameter"></p>
+                    <p class="character-homeworld__climate"></p>
+                    <p class="character-homeworld__gravity"></p>
+                    <p class="character-homeworld__terrain"></p>
+                </section>
+            </aside>
+        </section>
     </main>
+    <script src="app.js"></script>
 </body>
+
 </html>
